# 8iCodeChallenge

./: CMakeLists.txt  README.md  bayerfilter.cpp  bayerfilter.h  beyerfilter.cpp  beyerfilter.h  main.cpp
tests/: CMakeLists.txt  tests_main.cpp
